too out warning for deleting comments

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -9,7 +9,6 @@
 </p>
 
 <p>
-  <%= link_to 'Destroy Comment', [comment.article, comment], 
-               method: :delete
-               data: { confirm: 'Are You Sure?' } %>
+  <%= link_to 'Delete', [comment.article, comment], 
+               method: :delete %>
 </p>
