--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,4 +10,4 @@ Our blog has <%= Article.public_count %> articles and counting!
   <% end %>
 </ul>
 
-<% link_to 'New Article', new_article_path %>
+<%= link_to 'New Article', new_article_path %>
