--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,59 @@
 // Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+body {
+  background-color: white;
+}
+
+.header {
+  overflow: hidden;
+  position: sticky;
+  height: auto;
+  background: cover;
+  width: auto;
+  margin:auto;
+  padding: 50px;
+  color: white;
+  background-color: rgb(63, 63, 63);
+  text-align: center;
+  line-height: 100%;
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1%;
+  align-items: center;
+}
+
+.article_list_title {
+  margin-top: 1%;
+  text-align: center;
+}
+
+.Article_List {
+  display: flex;
+  flex-direction: center;
+  margin-top: 1%;
+  align-items: center;
+}
+
+.article_box {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(204, 195, 195);
+  width: 250px;
+  margin-bottom: 15px;
+  height: 100px;
+  border-radius: 25px;
+  padding: 20px;
+}
+
+.article_title_box {
+  background-color: rgb(82, 80, 80);
+  margin:0px;
+  padding:0px;
+  width: 100%;
+  color: white;
+}
