--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -4,6 +4,7 @@
 
 body {
   background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -27,9 +28,33 @@ body {
   align-items: center;
 }
 
-.article_list_title {
-  margin-top: 1%;
+.title_box {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+.button>a {
+  background-color: white;
+  color: black;
+  border: 2px solid  rgb(204, 195, 195);
+  padding: 10px 20px;
   text-align: center;
+  text-decoration: none;
+  margin: 50px;
+  border-radius: 25px;
+}
+
+.button {
+  margin: 15px;
+  margin-left: 15px;
+}
+
+.article_list_title {
+  margin-top: 15%;
+  text-align: center;
+  margin-left: 0%;
+
 }
 
 .Article_List {
@@ -40,20 +65,37 @@ body {
 }
 
 .article_box {
+  font-size: large;
   display: flex;
   flex-direction: column;
   background-color: rgb(204, 195, 195);
-  width: 250px;
+  width: 300px;
   margin-bottom: 15px;
-  height: 100px;
+  height: fit-content;
   border-radius: 25px;
   padding: 20px;
+  margin-top: 15px;
 }
 
 .article_title_box {
-  background-color: rgb(82, 80, 80);
-  margin:0px;
+  size: 15px;
+  margin-bottom:15px;
   padding:0px;
-  width: 100%;
+  width: 250px;
   color: white;
+  font-weight: bold;
+}
+
+.article_title_box>a {
+  color: black;
+  text-decoration: none;
+  font-size: larger;
+}
+
+.button_box {
+  display: flex;
+  flex-direction: row;
+  height: fit-content;
+  align-items: left;
+  max-width: 300px;
 }
