--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,23 @@
-<h1><%= @article.title %></h1>
+<div class="header">
+  <h1>Rails Blog</h1>
+    <h3>
+    Our blog has <%= Article.public_count %> articles and counting!
+    </h3>
+</div>
 
-<p><%= @article.body %></p>
 
-<ul>
-  <li><%= link_to 'Edit', edit_article_path(@article) %></li>
-  <li><%= link_to 'Destroy', article_path(@article),
+<div class="article_box">
+  <div class="article_title_box">
+    <%= link_to @article.title, article_path(@article) %>
+  </div>
+  <p><%= @article.body %></p>
+</div>
+<div class="button_box">
+  <div class="button"><%= link_to 'Edit', edit_article_path(@article) %></div>
+  <div class="button"><%= link_to 'Destroy', article_path(@article),
                   method: :delete,
-                  data: { confirm: 'Are you sure?' } %>
-</ul>
+                  data: { confirm: 'Are you sure?' } %></div>
+</div>
 
 <h2>Comments</h2>
 <%= render @article.comments %>
