--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -6,7 +6,9 @@ body {
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
-
+a {
+  text-decoration: none;
+}
 .header {
   overflow: hidden;
   position: sticky;
@@ -19,6 +21,9 @@ body {
   background-color: rgb(63, 63, 63);
   text-align: center;
   line-height: 100%;
+  text-decoration: none;
+
+  
 }
 
 .body {
