--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,4 @@
-<div class="header">
-  <h1>Rails Blog</h1>
-    <h3>
-    Our blog has <%= Article.public_count %> articles and counting!
-    </h3>
-</div>
+<%= render 'header'%>
 
 <div class="body">
   <div class = "title_box">
