--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,4 @@
-<div class="header">
-  <h1>Rails Blog</h1>
-    <h3>
-    Our blog has <%= Article.public_count %> articles and counting!
-    </h3>
-</div>
+<%= render 'header'%>
 
 
 <div class="article_box">
@@ -12,6 +7,7 @@
   </div>
   <p><%= @article.body %></p>
 </div>
+
 <div class="button_box">
   <div class="button"><%= link_to 'Edit', edit_article_path(@article) %></div>
   <div class="button"><%= link_to 'Destroy', article_path(@article),
